fix(client): increased the bottom controls' width to make it easier to use them on mobile

--- a/src/components/BottomNavbar/index.css
+++ b/src/components/BottomNavbar/index.css
@@ -16,6 +16,7 @@
   flex-direction: column;
   align-items: center;
   height: 100%;
+  width: 100%;
   justify-content: center;
   background: transparent;
   outline: 0;
